<resources>
    <!--    <string name="app_name">SingLanguage</string>-->
    <string name="app_name">Sign language</string>
    <string name="send_message">Send Message</string>
    <string name="cancel">Cancel</string>
    <string name="write_your_text_here">Write your message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="here_see_your_text">Here your text will appear</string>
    <string name="create_message">New Message</string>
    <string name="view_sing">Signs</string>
    <string name="view_numbers">Numbers</string>
    <string name="empty_message">Empty Message!</string>
    <string name="letter_a">Letter: A</string>
    <string name="number">Number: %1$s </string>
    <string name="letter">Letter: %1$s </string>
    <string name="letter_title">Letter</string>
    <string name="number_title">Number</string>

    <string name="test_id_application_admob" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_reward_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>

    <string name="admob_id" translatable="false">ca-app-pub-8271313080297168~9117641883</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="change_layout">Change layout</string>
    <string name="current_delay_time">Current delay time</string>
    <string name="delay_time">Delay time</string>
    <string name="settings_title">Settings</string>

    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="gray">Gray</string>
    <string name="change_hand_color">Change Hand Color</string>
    <string name="new_color_changed">The color of the hand has changed to: </string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="brawn">Brawn</string>
    <string name="pink">Pink</string>
    <string name="indigo">Indigo</string>
    <string name="green_light">Green Light</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="teal">Teal</string>
    <string name="no_connection">No connection</string>
    <string name="find_sing">Search for a sign</string>
    <string name="Error">Error</string>
    <string name="giphy_api_key" translatable="false">Fx16au8XaXm3cKQb9QsK2RoOR7rZL7G9</string>
    <string name="transition">Transition</string>
    <string name="fade">Fade</string>
    <string name="vertical_slide">Vertical slide</string>
    <string name="left_to_right">Left to right</string>
    <string name="right_to_left">Right to left</string>
    <string name="theme">Theme</string>
    <string name="movement_signs">Movement ASL</string>
    <string name="search_words">Search words</string>
    <string name="letter_and_numbers">Letters and numbers</string>
    <string name="simple_description">simple_description</string>
    <string name="history">History</string>
    <string name="help_us">Help us</string>
    <string name="no_microphone">This device does not have a voice recorder</string>
    <string name="confirm_delete_title">Are you sure you want to delete saved words?</string>
    <string name="confirm_delete_subtitle">By deleting the saved phrases and words, all the information you have saved on your device will be deleted. Do you want to continue?</string>
    <string name="clear_history_question">Do you want to clear the history?</string>
    <string name="delete">Delete</string>
    <string name="empty">EMPTY</string>
    <string name="your_history_is_empty">Your history is empty</string>
    <string name="current_hand_color">Current hand color</string>
    <string name="maximum_number_characters">The maximum number of characters is %1$d</string>

    <string name="intents">Attempts %1$d </string>
    <string name="game_find_game_title_letter">What is the sign of the letter </string>
    <string name="game_find_game_title_number">What is the sign of the number</string>
    <string name="current_record">Your record is: %1$s</string>

    <string name="hello_from_here">Hello from here</string>
    <string name="translate">Translate</string>
    <string name="dictionary">Dictionary</string>
    <string name="games">Games</string>
    <string name="placeholder">Enter your message</string>
    <string name="test_your_memory">Test your memory</string>
    <string name="guess_letter_number">Guess the correct letter or number</string>
    <string name="write_your_message">Write your message</string>
    <string name="send_message_with_signs">Show message with signs</string>
    <string name="find_the_even_signs">Find the even signs</string>
    <string name="find_correct_letter_or_sign">Find the correct letter or sign</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Sorry, you failed. try again</string>
    <string name="current_letter">Current Letter</string>
    <string name="send_message_with_images">Send message with images</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very hard</string>
    <string name="select_level">Select difficulty level</string>
    <string name="download_image">Download image</string>
    <string name="element_deleted">Element deleted</string>
    <string name="vibration">Vibration</string>
    <string name="menu_title">Title</string>

    <string name="repeat">Repeat</string>
    <string name="guess_the_word">Guess the word</string>
    <string name="guess_the_word_desc">Test your knowledge with suggested words</string>
    <string name="what_is_the_world">Which is the word</string>

    <string name="flip_game_title">Flipping Cards</string>
    <string name="flip_game_subtitle">Flip all the cards and find all the pairs.</string>

    <string name="sorry">Sorry, you have lost all your lives</string>
    <string name="try_again">Do you want to try again?</string>
    <string name="retry">Retry</string>
    <string name="go_back">Go back</string>

    <string name="times_over">Times over!</string>
    <string name="time_up">Oops! Your time is up.</string>

    <string name="level_completed">Level completed!</string>
    <string name="play_again">Play again</string>
    <string name="try_next_level">Maybe you should try the next level.</string>

    <string name="hits">Hits</string>
    <string name="record">Record</string>

    <string name="sound_in_games">Sound in games</string>
    <string name="sound">Sound</string>

    <string name="game_word_in_Sight">Word in Sight</string>
    <string name="game_word_in_sight_subtitle">Challenge yourself and uncover the word at hand</string>

    <string name="go_to_the_next_level">Do you want to go to the next level?</string>
    <string name="go_to_next_level">Go to next level</string>

    <string name="better_luck">Better luck next time"</string>
    <string name="return_menu">Return menu</string>
    <string name="you_lost">You lost</string>
    <string name="what_does_the_word_say">What does the word say?</string>
    <string name="check">Check</string>
    <string name="skip">skip</string>
    <string name="start">Start</string>

    <!--Sliders messages-->

    <string name="welcome_title">Welcome to ASL</string>
    <string name="welcome_subtitle">This is a tutorial for you to learn sign language</string>

    <string name="slider_title_1">Communication and Messaging</string>
    <string name="slider_subtitle_1">Send messages to your friends and family from the app</string>

    <string name="slider_title_2">Learning and Education</string>
    <string name="slider_subtitle_2">Learn new things on various topics from the app</string>

    <string name="slider_title_3">Games and Entertainment</string>
    <string name="slider_subtitle_3">Have fun playing different games within the app</string>



</resources>