<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutSendMessage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?android:attr/actionBarSize">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:text="@string/letter_a"
            android:textSize="24sp"
            android:visibility="visible" />

        <ImageSwitcher
            android:id="@+id/imageSwitcher"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_a_only_sing"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/seeCurrentMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"

            android:text="@string/here_see_your_text"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:visibility="visible" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_text_here"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"

                android:background="@android:color/transparent"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/send_message"

            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendMessageCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/cancel"
            android:visibility="gone"
            app:cornerRadius="40dp" />

        <!-- <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSpeech"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:cornerRadius="40dp"
             app:icon="@drawable/ic_mic"
             app:iconGravity="textStart"
             app:iconPadding="0dp" />-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/speech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/simple_description"
            app:backgroundTint="?attr/colorPrimary"
            app:srcCompat="@drawable/ic_mic"
            app:tint="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>